--- a/fotos.html
+++ b/fotos.html
@@ -68,7 +68,7 @@
       </script>
     
       <div style="text-align: center;">
-        <a href="./index.php"><button type="button" class="btn btn-outline-light mb-2 mb-sm-0" data-toggle="modal" data-target="#regresar">Regresar</button></a>
+        <a href="./index.html"><button type="button" class="btn btn-outline-light mb-2 mb-sm-0" data-toggle="modal" data-target="#regresar">Regresar</button></a>
       </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
