--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="modal-body">
             <img src="01.jpg" alt="" class="img-fluid rounded">
             <p class="mt-3">¿Quieres ver las nudes de Valentin? ¡Estas en el lugar correcto!</p>
-            <p class="mt-3">Da click <a href="fotos.php">aqui</a> y mira las fotos de Valentin 7u7</p>
+            <p class="mt-3">Da click <a href="fotos.html">aqui</a> y mira las fotos de Valentin 7u7</p>
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
