--- a/valentin/index.html
+++ b/valentin/index.html
@@ -34,12 +34,14 @@
                     que a dia de hoy a logrado ser un gran momero en la gruesa :)
                 </p>
                 <hr class="bg-light">
+                <a href="../"><button type="button" class="btn btn-outline-light mb-2 mb-sm-0">Inicio</button></a>
                 <button type="button" class="btn btn-outline-light mb-2 mb-sm-0" data-toggle="modal" data-target="#fotos">Fotos</button>
                 <button type="button" class="btn btn-outline-light mb-2 mb-sm-0" data-toggle="modal" data-target="#historia">Historia</button>
             </div>
         </div>
     </div>
-
+    
+    
     <!-- Modal  Fotos-->
     <div class="modal fade" id="fotos" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
@@ -65,6 +67,7 @@
         </div>
     </div>
     <!-- Modal  Fotos-->
+
 
      <!-- Modal  historia-->
     <div class="modal fade" id="historia" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
