--- a/valentin/index.html
+++ b/valentin/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -34,9 +37,9 @@
                     que a dia de hoy a logrado ser un gran momero en la gruesa :)
                 </p>
                 <hr class="bg-light">
-                <a href="../"><button type="button" class="btn btn-outline-light mb-2 mb-sm-0">Inicio</button></a>
-                <button type="button" class="btn btn-outline-light mb-2 mb-sm-0" data-toggle="modal" data-target="#fotos">Fotos</button>
-                <button type="button" class="btn btn-outline-light mb-2 mb-sm-0" data-toggle="modal" data-target="#historia">Historia</button>
+                <a href="../"><button type="button" class="btn btn-outline-light mb-2 mb-sm-0"><i class="fas fa-arrow-left"></i> Inicio</button></a>
+                <button type="button" class="btn btn-outline-light mb-2 mb-sm-0" data-toggle="modal" data-target="#fotos">Fotos <i class="far fa-images"></i></button>
+                <button type="button" class="btn btn-outline-light mb-2 mb-sm-0" data-toggle="modal" data-target="#historia">Historia <i class="fas fa-user"></i></button>
             </div>
         </div>
     </div>
