--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Carlos Ayala</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
     <style>
         body{
@@ -90,6 +89,13 @@
                 
     <div style="border-radius:15px; margin:1%;" class="text-center bg-dark py-5">
         <img src="foto.jpg" alt="" width="200px" height="200px" class="rounded-circle">
+        <hr>
+        <a style="color:white; font-size: 25px; padding: 10px;" href="https://pawnscript.com/foro/memberlist.php?mode=viewprofile&u=19137" target="_blank"><i class="fas fa-chess-pawn"></i></a>
+        <a style="color:white; font-size: 25px;" href="https://www.linkedin.com/in/carlos-ayala-834086185" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a style="color:white; font-size: 25px; padding: 10px;" href="https://github.com/SrMai" target="_blank"><i class="fab fa-github"></i></a>
+        <a style="color:white; font-size: 25px;" href = "mailto:carlosadrian.cg2@gmail.com?subject = Feedback&body = Message">
+            <i class="fas fa-at"></i>
+        </a>
     </div>
     <div id="accordion">
     <div style="color:white; border-radius:15px; margin:1%;" class="text-center bg-min-dark font-weight-light">
@@ -134,8 +140,6 @@
         </div>
     </div>
 </div>
-    <hr style="width: 50%;" class="hr-light">
-
     <script src="js/jquery-3.4.0.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
