--- a/valentin/fotos.html
+++ b/valentin/fotos.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html lang="es">
   <head>
+      <link rel="icon" href="Favicon.png" sizes="32x32">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -68,7 +71,7 @@
       </script>
     
       <div style="text-align: center;">
-        <a href="./"><button type="button" class="btn btn-outline-light mb-2 mb-sm-0" data-toggle="modal" data-target="#regresar">Regresar</button></a>
+        <a href="./"><button type="button" class="btn btn-outline-light mb-2 mb-sm-0" data-toggle="modal" data-target="#regresar"><i class="fas fa-arrow-left"></i> Regresar</button></a>
       </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
