--- a/t-rex.html
+++ b/t-rex.html
@@ -8,9 +8,21 @@
     <script src="t-rex/js-t-rex/jquery.js" type="text/javascript"></script>
     <script src="t-rex/js-t-rex/js.js" type="text/javascript"></script>
     <link rel="stylesheet" href="t-rex/css-t-rex/style.css">
+
+    <script>
+        function oscuro() {
+            document.body.style.backgroundColor = "black";
+            document.body.style.color = "white";
+        };
+        function light() {
+            document.body.style.backgroundColor = "white";
+            document.body.style.color = "black";
+        };
+    </script>
+
 </head>
 
-<body id="t">
+<body id="t" style="color:black;">
     <script type="text/javascript">document.getElementById("content").style.display = "none";</script>
     <div id="main-frame-error" class="interstitial-wrapper" jstcache="0">
         <div class="softhidewhenplaying">
@@ -52,6 +64,11 @@
         <div id='preload-01'></div>
         <div id='preload-02'></div>
         <div id='preload-03'></div>
+        <center>
+            <button onclick="oscuro();" type="submit">Cambiar a modo oscuro</button><br>
+            <button onclick="light();" type="submit">Cambiar a modo light</button>
+        </center>
+    </div>
 </body>
 
 </html>
