--- a/valentin/fotos.html
+++ b/valentin/fotos.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Galeria Valenciana</title>
-	<link rel="icon" href="images/icons/Favicon.png" sizes="32x32">
+	<link rel="icon" href="https://i.imgur.com/Hd5MDIo.png" sizes="32x32">
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
 	<style>
 		span.reference{
