--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<!-- Main -->
 		<section id="main">
 			<header>
-				<span class="avatar"><img src="images/images/avatar.jpg" alt="" /></span>
+				<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 				<h1>Carlos Ayala</h1>
 				<p>Desarrollador Web</p>
 			</header>
