Se actualizo el index
Se colocaron nuevos metodos de comunicación.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+
 <head>
 	<title>Carlos Ayala</title>
 	<meta charset="utf-8" />
@@ -12,15 +13,15 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script>
-			function mensaje(){
-				alert("Esta página esta en construcción.");
-			}
+	<script>
+		function mensaje() {
+			alert("Esta página esta en construcción.");
+		}
 
-		</script>
+	</script>
 </head>
 
-<body onload="mensaje()" class="is-preload">
+<body class="is-preload">
 
 	<!-- Wrapper -->
 	<div id="wrapper">
@@ -28,10 +29,39 @@
 		<!-- Main -->
 		<section id="main">
 			<header>
-				<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+				<span class="avatar"><img src="https://i.ibb.co/fdgQKfX/avatar-III.png" alt="" /></span>
 				<h1>Carlos Ayala</h1>
-				<p>Desarrollador Web</p>
+				<p>Desarrollador Web<br>-<br>Front end<br>Back end</p>
 			</header>
+			<!--
+							
+						<footer>
+							<ul class="icons">
+								<li><a href="https://www.linkedin.com/in/carlos-ayala-834086185" target="_blank" class="icon brands fa-linkedin-in">Linkedin</a></li>
+								<li><a href="https://www.github.com/SrMai" target="_blank" class="icon brands fa-github">GitHub</a></li>
+								<li><a href="#" class="icon brands fa-facebook-f">Facebook</a></li>
+							</ul>
+						</footer>
+					-->
+			<a style="color:rgb(0, 0, 0); font-size: 25px;" href="https://www.linkedin.com/in/carlos-ayala-834086185"
+				target="_blank"><i class="fab fa-linkedin-in"></i>
+			</a>
+			<a style="color:rgb(0, 0, 0); font-size: 25px; padding: 10px;" href="https://github.com/SrMai"
+				target="_blank"><i class="fab fa-github"></i>
+			</a>
+			<a style="color:rgb(0, 0, 0); font-size: 25px;"
+				href="mailto:carlosadrian.cg2@gmail.com?subject = Feedback&amp;body = Message">
+				<i class="fas fa-at"></i>
+			</a>
+			<br>
+			<a style="color:rgb(0, 0, 0); font-size: 25px;"
+				href="https://wa.me/5213324320347" target="_blank">
+				<i class="fab fa-whatsapp"></i>
+			</a>
+			<a style="color:rgb(0, 0, 0); font-size: 25px;"
+				href="tel:+523324320347">
+				<i class="fas fa-phone-volume"></i>
+			</a>
 			<!--
 						<hr />
 						<h2>Extra Stuff!</h2>
@@ -69,24 +99,6 @@
 						</form>
 						<hr />
 						-->
-			<!--
-							
-						<footer>
-							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/carlos-ayala-834086185" target="_blank" class="icon brands fa-linkedin-in">Linkedin</a></li>
-								<li><a href="https://www.github.com/SrMai" target="_blank" class="icon brands fa-github">GitHub</a></li>
-								<li><a href="#" class="icon brands fa-facebook-f">Facebook</a></li>
-							</ul>
-						</footer>
-					-->
-			<a style="color:rgb(0, 0, 0); font-size: 25px;" href="https://www.linkedin.com/in/carlos-ayala-834086185"
-				target="_blank"><i class="fab fa-linkedin-in"></i></a>
-			<a style="color:rgb(0, 0, 0); font-size: 25px; padding: 10px;" href="https://github.com/SrMai"
-				target="_blank"><i class="fab fa-github"></i></a>
-			<a style="color:rgb(0, 0, 0); font-size: 25px;"
-				href="mailto:carlosadrian.cg2@gmail.com?subject = Feedback&amp;body = Message">
-				<i class="fas fa-at"></i>
-			</a>
 		</section>
 		<!-- Footer -->
 		<footer id="footer">
@@ -106,4 +118,5 @@
 	</script>
 
 </body>
+
 </html>
