--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</script>
 </head>
 
-<body class="is-preload">
+<body onload="mensaje()" class="is-preload">
 
 	<!-- Wrapper -->
 	<div id="wrapper">
