--- a/Fotos/Hola.html
+++ b/Fotos/Hola.html
@@ -1,1 +1,223 @@
-hdjdj
+<!DOCTYPE HTML>
+
+<!--
+
+	Identity by HTML5 UP	Carlos Ayala | html5up.net | @ajlkn
+
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
+-->
+
+<html>
+
+<head>
+
+	<title>Carlos Ayala</title>
+
+	<meta charset="utf-8" />
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+	<link rel="stylesheet" href="assets/css/main.css" />
+
+	<noscript>
+
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+	<script>
+
+		function mensaje() {
+
+			alert("Esta página esta en construcción.");
+
+		}
+
+	</script>
+
+</head>
+
+<body onload="mensaje()" class="is-preload">
+
+	<!-- Wrapper -->
+
+	<div id="wrapper">
+
+		<!-- Main -->
+
+		<section id="main">
+
+			<header>
+
+				<span class="avatar"><img src="https://i.ibb.co/fdgQKfX/avatar-III.png" alt="" /></span>
+
+				<h1>Carlos Ayala</h1>
+
+				<p>Desarrollador Web<br>-<br>Front end<br>Back end</p>
+
+			</header>
+
+			<!--
+
+							
+
+						<footer>
+
+							<ul class="icons">
+
+								<li><a href="https://www.linkedin.com/in/carlos-ayala-834086185" target="_blank" class="icon brands fa-linkedin-in">Linkedin</a></li>
+
+								<li><a href="https://www.github.com/SrMai" target="_blank" class="icon brands fa-github">GitHub</a></li>
+
+								<li><a href="#" class="icon brands fa-facebook-f">Facebook</a></li>
+
+							</ul>
+
+						</footer>
+
+					-->
+
+			<a style="color:rgb(0, 0, 0); font-size: 25px;" href="https://www.linkedin.com/in/carlos-ayala-834086185"
+
+				target="_blank"><i class="fab fa-linkedin-in"></i>
+
+			</a>
+
+			<a style="color:rgb(0, 0, 0); font-size: 25px; padding: 10px;" href="https://github.com/SrMai"
+
+				target="_blank"><i class="fab fa-github"></i>
+
+			</a>
+
+			<a style="color:rgb(0, 0, 0); font-size: 25px;"
+
+				href="mailto:carlosadrian.cg2@gmail.com?subject = Feedback&amp;body = Message">
+
+				<i class="fas fa-at"></i>
+
+			</a>
+
+			<br>
+
+			<a style="color:rgb(0, 0, 0); font-size: 25px;"
+
+				href="https://wa.me/5213324320347" target="_blank">
+
+				<i class="fab fa-whatsapp"></i>
+
+			</a>
+
+			<a style="color:rgb(0, 0, 0); font-size: 25px;"
+
+				href="tel:+523324320347">
+
+				<i class="fas fa-phone-volume"></i>
+
+			</a>
+
+			<!--
+
+						<hr />
+
+						<h2>Extra Stuff!</h2>
+
+						<form method="post" action="#">
+
+							<div class="fields">
+
+								<div class="field">
+
+									<input type="text" name="name" id="name" placeholder="Name" />
+
+								</div>
+
+								<div class="field">
+
+									<input type="email" name="email" id="email" placeholder="Email" />
+
+								</div>
+
+								<div class="field">
+
+									<select name="department" id="department">
+
+										<option value="">Department</option>
+
+										<option value="sales">Sales</option>
+
+										<option value="tech">Tech Support</option>
+
+										<option value="null">/dev/null</option>
+
+									</select>
+
+								</div>
+
+								<div class="field">
+
+									<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
+
+								</div>
+
+								<div class="field">
+
+									<input type="checkbox" id="human" name="human" /><label for="human">I'm a human</label>
+
+								</div>
+
+								<div class="field">
+
+									<label>But are you a robot?</label>
+
+									<input type="radio" id="robot_yes" name="robot" /><label for="robot_yes">Yes</label>
+
+									<input type="radio" id="robot_no" name="robot" /><label for="robot_no">No</label>
+
+								</div>
+
+							</div>
+
+							<ul class="actions special">
+
+								<li><a href="#" class="button">Get Started</a></li>
+
+							</ul>
+
+						</form>
+
+						<hr />
+
+						-->
+
+		</section>
+
+		<!-- Footer -->
+
+		<footer id="footer">
+
+			<ul class="copyright">
+
+				<li>&copy; Carlos Ayala</li>
+
+			</ul>
+
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+
+	<script>
+
+		if ('addEventListener' in window) {
+
+			window.addEventListener('load', function () { document.body.className = document.body.className.replace(/\bis-preload\b/, ''); });
+
+			document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+
+		}
+
+	</script>
+
+</body>
+
+</html>
