--- a/ps3.html
+++ b/ps3.html
@@ -11,7 +11,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <script>
-window.location.href = "https://aprenderaprogramar.net";
+window.location.href = "https://thewizwikii.github.io/487/auto/";
 </script>
 </head>
 
