Edición del título
Se edito el título y nombres de crazy games a games

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/material-design-iconic-font.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/all.min.css">
-    <title>Crazy Games - Inicio</title>
+    <title>Games - Inicio</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <nav class="navbar">
             <header class="nabvar-mobile is-size-5-mobile">
                 <a class="navbar-mobile-link has-text-white" href="#" id="btn-mobile"><i class="zmdi zmdi-menu"></i></a>
-                <a class="navbar-mobile-link has-text-white" href="index.html">Crazy Games</a>
+                <a class="navbar-mobile-link has-text-white" href="index.html">Games</a>
                 <a class="navbar-mobile-link has-text-white" href="#"><i class="zmdi zmdi-shopping-cart"></i> Vacio</a>
             </header>
             <nav class="nav-menu" id="mySidenav">
@@ -46,7 +46,7 @@
                 </form>
 
                 <a class="is-hidden-mobile brand is-uppercase has-text-weight-bold has-text-dark active"
-                    href="index.html">Crazy Games</a>
+                    href="index.html">Games</a>
                 <ul class="nav-menu-ul">
                     <li class="nav-menu-item" id="men">
                         <a class="nav-menu-link link-submenu" href="#">Xbox <i class="zmdi zmdi-chevron-down"></i></a>
@@ -513,7 +513,7 @@
             <center>
                 <div class="container">
                     <a class="footer-bar-top-links" href="#">
-                        <li>&copy; Crazy Games 2021</li>
+                        <li>&copy; Games 2021</li>
                     </a>
                 </div>
             </center>
