--- a/Portafolio/south.html
+++ b/Portafolio/south.html
@@ -131,42 +131,20 @@
             </nav>
             <div class='introduction'>
                 <div class='text'>
-                    <h1 class='dark'>Crazy Games GDL</h1>
+                    <h1 class='dark'>South Broadway Roleplay</h1>
                     <div class='paragraphs'>
                         <div class='wrap'>
-                            <p class='first dark'>Crazy Games es una página de ventas online con servicio de reparaciones y chips para consolas, esta pagina fue promocionada en Guadalajara para un local en San Juan de Dios.</p>
+                            <p class='first dark'>South Broadway Roleplay fue mi último proyecto en la comunidad online de GTA San Andreas, este fue un sitio web conectado a un servidor escrito en pawn, este contaba con un panel de control de usuarios, panel administrativo,
+                                sistema de ventas de monedas virtuales y un foro comunitario.</p>
                         </div>
                         <div class='wrap'>
-                            <p class='second dark'>Este sitio web cuenta con metodos de pago por paypal y envios nacionales.</p>
+                            <p class='second dark'>Este servidor fue promocionado durante los 8 meses que me llevo su desarrollo.</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class='proof-left'>
-                <img src='images/projects/store/introduction.jpg' />
-            </div>
-            <div class='propositions'>
-                <div class='full-box'></div>
-                <div class='wrap'>
-                    <div class='hobby'>
-                        <p class='mono'>Antes</p>
-                        <div class='pieces'>
-                            <p class='text'>No se tenia pagina</p>
-                            <p class='text'>Se iban clientes por que no habia servicio a domicilio</p>
-                            <p class='text'>Se iban clientes por que solo se aceptaba efecivo</p>
-                        </div>
-                    </div>
-                    <div class='hobby'>
-                        <p class='mono'>Despues</p>
-                        <div class='pieces'>
-                            <p class='text'>Aumentaron las ventas minoristas un 60%</p>
-                            <p class='text'>Aumentaron las ventas al mayoreo un 20%</p>
-                            <p class='text'>Se utilizo la pagina como medio para pago online en el local</p>
-                            <p class='text'>Se aumento el numero de empleados para hacer soporte al cliente y entregas locales</p>
-                            <p class='text'>Aumentaron las ventas al mayoreo un 20%</p>
-                        </div>
-                    </div>
-                </div>
+                <img src='images/projects/South/introduction.jpg' />
             </div>
             <div class='overview'></div>
             <div class='casing '>
@@ -174,8 +152,10 @@
                     <p class='mono'>Descripcion</p>
                 </div>
                 <div class='pieces'>
-                    <p class='text'>Este local tenia bastantes clientes al día, sus ventas atravez la Facebook eran altas pero el tiempo no alcanzaba.</p>
-                    <p class='text'>Me di cuenta que si se creaba un mejor sistema de ventas estas aumentaria y hasta se venderia sola la mercancia, asi que comenze a hacer la pagina.</p>
+                    <p class='text'>Este proyecto fue pensado cuando hize el servidor Mega Maniacos Freeroam, era muy diferente y no podria usar nuevamente el codigo ya usado pero iba ser un buen reto para tomar mas experiencia, consegui un equipo de diseñadores para
+                        el servidor, un estudiante para apoyarme en el codigo del servidor y otro para la pagina web.</p>
+                    <p class='text'>Me di cuenta que aunque lo terminara y tuviera la mejor interfaz que hubieran visto los usuarios, ninguno se quedaria ya que habria muy poca gente, asi que consegui publicidad de algunos youtubers de esta comunidad para promocionar
+                        el servidor, despues consegui un equipo de administradores para llevar el orden durante y despues de la apertura.</p>
                 </div>
             </div>
             <div class='proof-right'>
@@ -187,8 +167,10 @@
                     <p class='mono'>El Problema</p>
                 </div>
                 <div class='pieces'>
-                    <p class='text'>El negocio tenia muy buenas ganancias, pero muy mala publicidad online.</p>
-                    <p class='text'>Perdian muchas ventas debido a que no se tenian metodos de pago online, servicio a domicilio ni pagina para ver sus productos.</p>
+                    <p class='text'>El problema era que al ser un servidor que conlleva mucho trabajo, y aparte la pagina y siendo el unico progamador capaz de hacer todo eso, me tomo mas tiempo de lo esperado y los usuarios se enfadaban y terminaban llendose, asi que
+                        abri un servidor de pruebas donde iba subiendo las actualizaciones para intentar mantener entretenidos a los usuarios.</p>
+                    <p class='text'>Otro de los problemas, es que esta comunidad tiene muchisimos ataques DDoS e inyección de bases de datos, asi que tuve que programar un anti DDoS y varios sistemas de seguridad para el servidor, tambien un anticheat para evitar que
+                        los usuarios hicieran trampa..</p>
                 </div>
             </div>
             <div class='proof-left'>
@@ -200,8 +182,8 @@
                     <p class='mono'>Solución</p>
                 </div>
                 <div class='pieces'>
-                    <p class='text'>Se comenzo a crear una pagina solo para ver los productos, cuando nos dimos cuenta que tenia muchas visitas dicha pagina se decidio colocar un metodo de pago y envio solo en el estado de Jalisco.</p>
-                    <p class='text'>Cuando comenzaron a subir las ventas localmente y a tener buenas reseñas, se decidio expandirse y hacer envios nacionales, esto creo nuevos empleos en dicho local y se lograron abrir 2 locales mas para cubrir las ventas..</p>
+                    <p class='text'>Una vez el servidor estaba listo para abrir, contrate a 2 youtubers para estar en directo durante la apertura, el servidor termino llenando todos los slots y termine comprando mas.</p>
+                    <p class='text'>Debido al sistema de seguridad la apertura fue un exito, muchos intentaron tumbar el server pero nadie tuvo los recursos para poder tirarlo.</p>
                 </div>
             </div>
             <div class='proof-right'>
@@ -213,23 +195,23 @@
                     <p class='mono'>Mejoras</p>
                 </div>
                 <div class='pieces'>
-                    <p class='text'>Despues de un tiempo se añadieron mejores fotografias, mas productos y la opción de comprar para mayoristas.</p>
-                    <p class='text'>Se añadio una garantia online en productos para inspirar mas confianza, el primer retorno era gratis..</p>
+                    <p class='text'>Luego de la implementación del sistema anti ataques fue uno de los servidores mas seguros de la comunidad.</p>
+                    <p class='text'>Habia muy pocos cheaters debido al anticheat y al exajerado equipo de administradores.</p>
                 </div>
             </div>
             <footer>
                 <p class='mono selection'>Otros Proyectos</p>
                 <div class='footer-cards'>
-                    <a class='card aparcat direction' href='south.html'>
+                    <a class='card aparcat direction' href='store.html'>
                         <div class='container'>
                             <div class='imagery'>
-                                <img src='images/projects/South/South.png' />
+                                <img src='images/projects/store/store.jpg' />
                             </div>
                             <div class='bottom-description lighter'></div>
                             <div class='description lighter'>
                                 <div class='wrapper'>
-                                    <h4 class='dark'>South Broadway Roleplay</h4>
-                                    <p class='dark'>Un importante servidor de GTA SA-MP</p>
+                                    <h4 class='dark'>Games Crazy</h4>
+                                    <p class='dark'>Una tienda web E-Commerce online con envios nacionales</p>
                                 </div>
                                 <div class='indicator'>
                                     <img class='arrow' src='https://d33wubrfki0l68.cloudfront.net/f263eb9b0de12406236b21f17e05a2735b662034/7258f/images/projects/arrow.svg' />
