--- a/portfolio/games-crazy/index.html
+++ b/portfolio/games-crazy/index.html
@@ -989,8 +989,8 @@
 												class="art-link art-color-link art-w-chevron art-left-link"><span>Anterior
 													Proyecto</span></a>
 											<div class="art-pagination-center art-m-hidden"> <a class="art-link"
-													href="../index.html">Todos Los Proyectos</a></div> <a
-												href="../%d1%81ardboard-%d1%81up-mockup/index.html"
+													href="#">Todos Los Proyectos</a></div> <a
+												href="#"
 												class="art-link art-color-link art-w-chevron"><span>Siguiente
 													Proyecto</span></a>
 										</div>
