--- a/portfolio/games-crazy/index.html
+++ b/portfolio/games-crazy/index.html
@@ -215,7 +215,7 @@
 								</div>
 							</div>
 							<div class="art-ls-divider"></div>
-							<div class="art-links-frame p-15-15"> <a href="https://drive.google.com/" class="art-link"
+							<div class="art-links-frame p-15-15"> <a href="#" class="art-link"
 									target="_blank">Download cv <i class="fas fa-download"></i></a></div>
 						</div>
 						<div class="art-ls-social">
