--- a/index.html
+++ b/index.html
@@ -1409,8 +1409,7 @@
 																									venta para
 																									restaurantes de
 																									pollos asados.</div>
-																								<a href="portfolio/punto-de-venta/index.html"
-																									class="art-link art-color-link art-w-chevron">Leer
+																								<a class="art-link art-color-link art-w-chevron">Leer
 																									Más</a>
 																							</div>
 																						</div>
@@ -1525,7 +1524,6 @@
 																									Website para una
 																									comunidad en GTA
 																									SA-MP.</div> <a
-																									href="portfolio/south-broadway/index.html"
 																									class="art-link art-color-link art-w-chevron">Leer
 																									Más</a>
 																							</div>
@@ -1551,7 +1549,6 @@
 																									Website para una
 																									comunidad en GTA
 																									SA-MP.</div> <a
-																									href="portfolio/mmf/index.html"
 																									class="art-link art-color-link art-w-chevron">Leer
 																									Más</a>
 																							</div>
@@ -1579,7 +1576,6 @@
 																									de peticion de
 																									canciones y chat en
 																									vivo.</div> <a
-																									href="portfolio/radio/index.html"
 																									class="art-link art-color-link art-w-chevron">Leer
 																									Más</a>
 																							</div>
@@ -1609,7 +1605,6 @@
 																									construir y editar
 																									con 1 tecla.
 																								</div> <a
-																									href="portfolio/macros/index.html"
 																									class="art-link art-color-link art-w-chevron">Leer
 																									Más</a>
 																							</div>
@@ -1638,7 +1633,6 @@
 																									en muchas PCs en una
 																									red local.
 																								</div> <a
-																									href="portfolio/backdoor/index.html"
 																									class="art-link art-color-link art-w-chevron">Leer
 																									Más</a>
 																							</div>
