--- a/portfolio/games-crazy/index.html
+++ b/portfolio/games-crazy/index.html
@@ -959,7 +959,7 @@
 																											trabajar
 																											juntos!
 																										</span></div> <a
-																										href="../../contact/index.html"
+																										href="../../index.html#contact-section"
 																										class="art-btn art-btn-md">
 																										<span> Contacto
 																										</span>
