--- a/index.html
+++ b/index.html
@@ -2216,11 +2216,13 @@
 																							<div>
 																								<ul>
 																									<li><strong>Soporte
-																											Tecnico<br>(Solo
-																											WhatsApp):</strong>
+																											Tecnico:<br>(Solo
+																											WhatsApp) 2PM - 10PM</strong>
 																										+52 33 3223 0921
 																									</li>
-																									<li><strong>Oficina:</strong>
+																									<li><strong>Oficina:
+																										<br>2PM - 10PM
+																									</strong>
 																										+52 33 3486 3740
 																									</li>
 																									<li><strong>Personal:</strong>
