--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 										<h6>Ciudad:</h6><span>Guadalajara, Jal</span>
 									</li>
 									<li>
-										<h6>Edad:</h6><span>19</span>
+										<h6>Edad:</h6><span>20</span>
 									</li>
 								</ul>
 							</div>
@@ -485,7 +485,8 @@
 																								</div>
 																								<div
 																									class="art-buttons-frame">
-																									<a target="_blank" href="https://wa.me/523324320347?text=Hola,%20me%20interesan%20tus%20servicios%20como%20desarrollador%20web."
+																									<a target="_blank"
+																										href="https://wa.me/523324320347?text=Hola,%20me%20interesan%20tus%20servicios%20como%20desarrollador%20web."
 																										class="art-link art-color-link art-w-chevron">
 																										<span> Contacto
 																										</span> </a>
@@ -529,7 +530,8 @@
 																								</div>
 																								<div
 																									class="art-buttons-frame">
-																									<a target="_blank" href="https://wa.me/523324320347?text=Hola,%20me%20interesan%20tus%20servicios%20como%20desarrollador%20backend."
+																									<a target="_blank"
+																										href="https://wa.me/523324320347?text=Hola,%20me%20interesan%20tus%20servicios%20como%20desarrollador%20backend."
 																										class="art-link art-color-link art-w-chevron">
 																										<span> Contacto
 																										</span> </a>
@@ -580,7 +582,8 @@
 																								</div>
 																								<div
 																									class="art-buttons-frame">
-																									<a target="_blank" href="https://wa.me/523324320347?text=Hola,%20me%20interesan%20tus%20servicios%20como%20analista."
+																									<a target="_blank"
+																										href="https://wa.me/523324320347?text=Hola,%20me%20interesan%20tus%20servicios%20como%20analista."
 																										class="art-link art-color-link art-w-chevron">
 																										<span> Contacto
 																										</span> </a>
@@ -628,7 +631,8 @@
 																								</div>
 																								<div
 																									class="art-buttons-frame">
-																									<a target="_blank" href="https://wa.me/523324320347?text=Hola,%20me%20interesan%20tus%20servicios%20como%20forense."
+																									<a target="_blank"
+																										href="https://wa.me/523324320347?text=Hola,%20me%20interesan%20tus%20servicios%20como%20forense."
 																										class="art-link art-color-link art-w-chevron">
 																										<span> Contacto
 																										</span> </a>
@@ -671,7 +675,8 @@
 																								</div>
 																								<div
 																									class="art-buttons-frame">
-																									<a target="_blank" href="https://wa.me/523324320347?text=Hola,%20me%20interesan%20tus%20servicios%20como%20desarrollador."
+																									<a target="_blank"
+																										href="https://wa.me/523324320347?text=Hola,%20me%20interesan%20tus%20servicios%20como%20desarrollador."
 																										class="art-link art-color-link art-w-chevron">
 																										<span> Contacto
 																										</span> </a>
@@ -725,7 +730,8 @@
 																								</div>
 																								<div
 																									class="art-buttons-frame">
-																									<a target="_blank" href="https://wa.me/523324320347?text=Hola,%20me%20interesan%20tus%20servicios%20en%20mantenimiento."
+																									<a target="_blank"
+																										href="https://wa.me/523324320347?text=Hola,%20me%20interesan%20tus%20servicios%20en%20mantenimiento."
 																										class="art-link art-color-link art-w-chevron">
 																										<span> Contacto
 																										</span> </a>
@@ -808,7 +814,7 @@
 																										</ul>
 																									</div>
 																								</div> <a
-																									href="contact/index.html"
+																									href="https://wa.me/523324320347?text=Hola, quiero asesoria y una cotización."
 																									class="art-link art-color-link art-w-chevron">
 																									<span> Contacto
 																									</span> </a>
@@ -883,7 +889,7 @@
 																										</ul>
 																									</div>
 																								</div> <a
-																									href="contact/index.html"
+																									href="https://wa.me/523324320347?text=Hola, tengo un proyecto y quisiera pagar por hora."
 																									class="art-link art-color-link art-w-chevron">
 																									<span> Contacto
 																									</span> </a>
@@ -946,10 +952,14 @@
 																											<li>Desarrollo
 																												Desktop
 																											</li>
+																											<li>Prioridad
+																												de
+																												proyecto
+																											</li>
 																										</ul>
 																									</div>
 																								</div> <a
-																									href="contact/index.html"
+																									href="https://wa.me/523324320347?text=Hola, tengo un proyecto y me interesa tu servicio por un día."
 																									class="art-link art-color-link art-w-chevron">
 																									<span> Contacto
 																									</span> </a>
@@ -2353,7 +2363,7 @@
 					d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-4.466 19.59c-.405.078-.534-.171-.534-.384v-2.195c0-.747-.262-1.233-.55-1.481 1.782-.198 3.654-.875 3.654-3.947 0-.874-.312-1.588-.823-2.147.082-.202.356-1.016-.079-2.117 0 0-.671-.215-2.198.82-.64-.18-1.324-.267-2.004-.271-.68.003-1.364.091-2.003.269-1.528-1.035-2.2-.82-2.2-.82-.434 1.102-.16 1.915-.077 2.118-.512.56-.824 1.273-.824 2.147 0 3.064 1.867 3.751 3.645 3.954-.229.2-.436.552-.508 1.07-.457.204-1.614.557-2.328-.666 0 0-.423-.768-1.227-.825 0 0-.78-.01-.055.487 0 0 .525.246.889 1.17 0 0 .463 1.428 2.688.944v1.489c0 .211-.129.459-.528.385-3.18-1.057-5.472-4.056-5.472-7.59 0-4.419 3.582-8 8-8s8 3.581 8 8c0 3.533-2.289 6.531-5.466 7.59z" />
 			</svg>
 			<span>Github</span> </a>
-			<!--
+		<!--
 		<a href="https://www.linkedin.com/in/carlos-ayala-834086185/" target="blank" class="b-po log" rel="noopener">
 			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
 				<path
