--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
-	<title>Carlos Ayala || CV Resume</title>
+	<title>Redireccionando al nuevo doominio</title>
 </head>
 
 <body>
-	<iframe src="https://carlosayala.space/" width="100%" height="100%" frameborder="0" scrolling="auto"></iframe>
+    <script>
+        // Redireccionar a la página deseada con JavaScript
+        window.location.href = "https://carlosayala.space/";
+    </script>
 </body>
 
 </html>
